Automate world backup

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,8 @@
 [DEFAULT]
-;file_path = /home/steam/valheimserver/valheim_server_Data/Managed/assembly_valheim.dll
-file_path = /home/marco/PycharmProjects/valheim-desync-fix/assembly_valheim.dll
+file_path = /home/steam/valheimserver/valheim_server_Data/Managed/assembly_valheim.dll
 log_level = INFO
+
+[BACKUP]
+save_dir = /home/steam/.config/unity3d/IronGate/Valheim/world
+max_backup = 62
+backup_interval = DAILY
